# VPR-VSC

./: .gitignore  CMakeLists.txt
include/: Shader.hpp
include/glad/: glad.h
src/: Shader.cpp  glad.c  main.cpp
src/shaders/: basic.frag  basic.vert
